<resources>
    <string name="app_name">Poligon</string>

    <string name="option_1">Novi poligon</string>
    <string name="option_2">Statistika</string>
    <string name="option_3">Podešavanja</string>

    <string name="draw_menu_nista_option">Stop crtanju</string>
    <string name="draw_menu_start_option">Pošetni položaj kuglice</string>
    <string name="draw_menu_true_rupa_option">Ciljna rupa</string>
    <string name="draw_menu_false_rupa_option">Pogrešna rupa</string>
    <string name="draw_menu_zid_option">Zid</string>
    <string name="draw_menu_save_draw_option">Sačuvajte</string>
    <string name="draw_menu_cancel_draw_option">Izadjite</string>
    <string name="draw_menu_undo_option">Korak nazad</string>
    <string name="draw_menu_erase_option">Obrišite sve</string>
    <string name="delete_poligon_option">Obrišite poligon</string>

    <string name="congrats_message">Čestitamo!</string>
    <string name="score_name">Vaše ime</string>
    <string name="save_result_btn">Sačuvajte rezultat</string>
    <string name="cancel_btn">Otkažite</string>

    <string name="poligon_scores_username_label">Ime igrača:</string>
    <string name="poligon_scores_user_score_label">Broj sekundi:</string>

    <string name="clear_all_statistics">Obrišite sve statistike</string>
    <string name="clear_statistics_for_poligon">Obrišite statistike za odabrani poligon</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_category">Podešavanje igre</string>
    <string name="reset_category">Reset</string>

    <string name="pref_title_otpor_label">Otpor kotrljanja kuglice</string>
    <string name="pref_title_faktor_odbijanja_label">Faktor odbijanja kuglice</string>

    <string name="reset_settings_option">Resetujte podešavanja</string>
    <string name="reset_settings_option_detail">Resetujte podešavanja na početno stanje</string>

    <string name="are_you_sure">Da li ste sigurni?</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
