<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nista_option"
            android:orderInCategory="1"
            android:title="@string/draw_menu_nista_option" />

        <item android:id="@+id/start_ball_option"
            android:orderInCategory="2"
            android:title="@string/draw_menu_start_option" />

        <item android:id="@+id/true_rupa_option"
            android:orderInCategory="3"
            android:title="@string/draw_menu_true_rupa_option" />

        <item android:id="@+id/false_rupa_option"
            android:orderInCategory="4"
            android:title="@string/draw_menu_false_rupa_option" />

        <item android:id="@+id/zid_option"
            android:orderInCategory="5"
            android:title="@string/draw_menu_zid_option" />
    </group>
    <item android:id="@+id/save_draw_option"
        android:title="@string/draw_menu_save_draw_option"
        app:showAsAction="ifRoom"
        android:icon="@drawable/save_logo"
        android:orderInCategory="6"/>

    <item android:id="@+id/cancel_draw_option"
        android:title="@string/draw_menu_cancel_draw_option"
        app:showAsAction="ifRoom"
        android:icon="@drawable/exit_logo"
        android:orderInCategory="7"/>

    <item android:id="@+id/draw_undo_option"
        android:title="@string/draw_menu_undo_option"
        app:showAsAction="ifRoom"
        android:icon="@drawable/undo_logo"
        android:orderInCategory="8"/>

    <item android:id="@+id/draw_erase_option"
        android:title="@string/draw_menu_erase_option"
        app:showAsAction="ifRoom"
        android:icon="@drawable/delete_logo"
        android:orderInCategory="9"/>
</menu>
